--- a/scss/components/_intro-component.scss
+++ b/scss/components/_intro-component.scss
@@ -18,6 +18,7 @@ main {
   @media only screen and (min-width: $bp-desktop) {
     align-self: center;
     text-align: left;
+    margin-bottom: 0;
   }
 
   &__heading {
@@ -26,6 +27,10 @@ main {
     line-height: 1.2;
     color: $white;
     margin-bottom: 3rem;
+
+    @media only screen and (min-width: $bp-desktop) {
+      font-size: 5rem;
+    }
   }
 
   &__content {
